--- a/Pages/BookView/Delete.cshtml
+++ b/Pages/BookView/Delete.cshtml
@@ -4,40 +4,49 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3/6zW8/odX/+u6Xeg" crossorigin="anonymous">
 <link rel="stylesheet" href="~/css/DeleteBook.css" asp-append-version="true" />
 
-<body class="bg-dark text-white">
-    <div class="container mt-5">
-        <h1>Delete</h1>
-        <h3>Are you sure you want to delete this?</h3>
-        <div class="card bg-secondary">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="@Html.DisplayFor(model => model.Books.CoverImageUrl)" class="img-fluid rounded-start" alt="Book Cover">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h3 class="card-title">@Html.DisplayFor(model => model.Books.Title)</h3>
-                        <p class="card-text"><small class="text-muted">Author: @Html.DisplayFor(model => model.Books.Author)</small></p>
-                        <p class="card-text">Description: @Html.DisplayFor(model => model.Books.Description)</p>
-                        <p class="card-text">Genre: @Html.DisplayFor(model => model.Books.Genre)</p>
-                        <p class="card-text">Rental Price: @Html.DisplayFor(model => model.Books.Price)</p>
-                        <p class="card-text">Publisher: @Html.DisplayFor(model => model.Books.Publisher)</p>
-                        <p class="card-text">Year: @Html.DisplayFor(model => model.Books.Year)</p>
-                        <p class="card-text">Pages: @Html.DisplayFor(model => model.Books.Pages)</p>
-                        <p class="card-text">Language: @Html.DisplayFor(model => model.Books.Language)</p>
+@if (SignInManager.IsSignedIn(User))
+{
+    @if (UserManager.GetUserAsync(User).Result.Admin == true)
+    {
+        <body class="bg-dark text-white">
+            <div class="container mt-5">
+                <h1>Delete</h1>
+                <h3>Are you sure you want to delete this?</h3>
+                <div class="card bg-secondary">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="@Html.DisplayFor(model => model.Books.CoverImageUrl)" class="img-fluid rounded-start" alt="Book Cover">
+                        </div>
+
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h3 class="card-title">@Html.DisplayFor(model => model.Books.Title)</h3>
+                                <p class="card-text"><small class="text-muted">Author: @Html.DisplayFor(model => model.Books.Author)</small></p>
+                                <p class="card-text">Description: @Html.DisplayFor(model => model.Books.Description)</p>
+                                <p class="card-text">Genre: @Html.DisplayFor(model => model.Books.Genre)</p>
+                                <p class="card-text">Rental Price: @Html.DisplayFor(model => model.Books.Price)</p>
+                                <p class="card-text">Publisher: @Html.DisplayFor(model => model.Books.Publisher)</p>
+                                <p class="card-text">Year: @Html.DisplayFor(model => model.Books.Year)</p>
+                                <p class="card-text">Pages: @Html.DisplayFor(model => model.Books.Pages)</p>
+                                <p class="card-text">Language: @Html.DisplayFor(model => model.Books.Language)</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="mt-3">
+                    <form method="post">
+                        <input type="hidden" asp-for="Books.Id" />
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                        <a asp-page="./Index" class="btn btn-light">Back to List</a>
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="mt-3">
-            <form method="post">
-                <input type="hidden" asp-for="Books.Id" />
-                <input type="submit" value="Delete" class="btn btn-danger" />
-                <a asp-page="./Index" class="btn btn-light">Back to List</a>
-            </form>
-        </div>
-    </div>
-</body>
+        </body>
+    }
+}
