--- a/Pages/BookView/Details.cshtml
+++ b/Pages/BookView/Details.cshtml
@@ -4,7 +4,9 @@
 @{
     ViewData["Title"] = "Details";
 }
-
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3/6zW8/odX/+u6Xeg" crossorigin="anonymous">
 <link rel="stylesheet" href="~/css/DetailsBook.css" asp-append-version="true" />
 
@@ -32,7 +34,13 @@
             </div>
         </div>
         <div class="mt-3">
-            <a asp-page="./Edit" asp-route-id="@Model.Books?.Id" class="btn btn-primary">Edit</a>
+            @if (SignInManager.IsSignedIn(User))
+            {
+                @if (UserManager.GetUserAsync(User).Result.Admin == true)
+                {
+                    <a asp-page="./Edit" asp-route-id="@Model.Books?.Id" class="btn btn-primary">Edit</a>
+                }
+            }
             <a asp-page="./Index" class="btn btn-light">Back to List</a>
         </div>
     </div>
