Changing create book system

--- a/Pages/Cart/Index.cshtml
+++ b/Pages/Cart/Index.cshtml
@@ -87,7 +87,7 @@
     }
     else
     {
-        <h1>Your basket total must be above 0$ and you must be logged in order for the checkout button to appear.</h1>
+        <h1 class="text-white">Your basket total must be above 0$ and you must be logged in order for the checkout button to appear.</h1>
     }
 
 
