--- a/Pages/BookView/Create.cshtml
+++ b/Pages/BookView/Create.cshtml
@@ -40,8 +40,12 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Books.Genre" class="control-label"></label>
-                        <select asp-for="Books.Genre" class="form-control" asp-items="Html.GetEnumSelectList<Genre>()">
+                        <select asp-for="Books.Genre" class="form-control">
                             <option value="">Select a Genre</option>
+                            @foreach (var genre in Enum.GetValues(typeof(Genre)))
+                            {
+                                <option value="@genre">@genre</option>
+                            }
                         </select>
                         <span asp-validation-for="Books.Genre" class="text-danger"></span>
                     </div>
@@ -67,8 +71,12 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Books.Language" class="control-label"></label>
-                        <select asp-for="Books.Language" class="form-control" asp-items="Html.GetEnumSelectList<Language>()">
+                        <select asp-for="Books.Language" class="form-control">
                             <option value="">Select a Language</option>
+                            @foreach (var language in Enum.GetValues(typeof(Language)))
+                            {
+                                <option value="@language">@language</option>
+                            }
                         </select>
                         <span asp-validation-for="Books.Language" class="text-danger"></span>
                     </div>
